# FlintBloom

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  Makefile  QUICK_REFERENCE.md  README.md  README_CN.md  check_status.py  docker-compose.yml  pyproject.toml  start.sh  test_solutions.py  verify_setup.py
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  example_dynamic_threadid.py  example_langgraph_app.py  examples.py  requirements-dev.txt  requirements.txt  test_main.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py
backend/app/db/: models.py  schemas.py
backend/app/db/adapters/: __init__.py  base.py  mysql.py  postgresql.py  sqlite.py
backend/app/modules/offline/: __init__.py  analyzer.py  api.py  parser.py
backend/app/modules/realtime/: __init__.py  api.py  callbacks.py  collector.py
backend/flintbloom/: __init__.py  callbacks.py
backend/migrations/: env.py  script.py.mako
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: LanguageSwitcher.tsx  Logo.tsx
frontend/src/contexts/: LanguageContext.tsx
frontend/src/i18n/: translations.ts
frontend/src/pages/: Dashboard.tsx  RealtimeMonitor.tsx  ThreadList.tsx  TraceViewer.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
